--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ click==8.1.3
 cycler==0.11.0
 Flask==2.2.2
 fonttools==4.37.4
+gunicorn==20.1.0
 importlib-metadata==5.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
